--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-numpy
-matplotlib
-sympy
-ipywidgets
-jupyter
+numpy>=1.24
+scipy>=1.10
+matplotlib>=3.7
+pandas>=2.0
+scikit-learn>=1.3
+seaborn>=0.12
+jupyterlab>=4.0
+notebook>=7.0
+tqdm>=4.66
+ipython>=8.12
