--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,57 @@
-numpy>=1.24
-scipy>=1.10
-matplotlib>=3.7
-pandas>=2.0
-scikit-learn>=1.3
-seaborn>=0.12
-jupyterlab>=4.0
-notebook>=7.0
-tqdm>=4.66
-ipython>=8.12
+# MFSU - Universal Fractal-Stochastic Model
+# Dependencies for reproduction and analysis
+
+# Core scientific computing
+numpy>=1.21.0
+scipy>=1.7.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+pandas>=1.3.0
+
+# Statistical analysis
+scikit-learn>=1.0.0
+statsmodels>=0.13.0
+astropy>=5.0.0
+
+# Fractal and complex systems analysis
+fractal-dimension>=1.0.0
+pybox>=0.1.0
+pywavelets>=1.1.0
+
+# Data visualization
+plotly>=5.0.0
+bokeh>=2.4.0
+ipywidgets>=7.6.0
+
+# Jupyter and notebooks
+jupyter>=1.0.0
+jupyterlab>=3.0.0
+notebook>=6.4.0
+
+# CMB analysis (optional)
+healpy>=1.15.0
+camb>=1.3.0
+
+# Testing and development
+pytest>=6.2.0
+pytest-cov>=3.0.0
+black>=21.0.0
+flake8>=4.0.0
+mypy>=0.910
+
+# Documentation
+sphinx>=4.0.0
+sphinx-rtd-theme>=1.0.0
+myst-parser>=0.17.0
+
+# Performance and utilities
+numba>=0.56.0
+joblib>=1.1.0
+tqdm>=4.62.0
+h5py>=3.6.0
+
+# Version pinning for reproducibility
+# (uncomment for exact reproducibility)
+# numpy==1.24.3
+# scipy==1.10.1
+# matplotlib==3.7.1
